# chippy

./: .gitignore  .travis.yml  Makefile.am  README.md  autogen.sh  configure.ac  meson.build
src/: chip8.c  chip8.h  main.c
src/chippy/: gfx.c  gfx.h  main.c  meson.build
src/libchippy/: chippy.c  chippy.h  meson.build
tests/: meson.build  opcodes.c  test.c
