AC_INIT(
    [Chippy],
    [0.0.1],
    [https://github.com/jacobvaneijk/chippy/issues],
    [chippy],
    [https://github.com/jacobvaneijk/chippy])

AM_INIT_AUTOMAKE([foreign subdir-objects])

AC_PREREQ([2.69])

AC_CONFIG_SRCDIR([configure.ac])
AC_CONFIG_HEADERS([config.h])

AC_PROG_CC

AC_CONFIG_FILES([Makefile])

AC_OUTPUT
